# summarizer-serve

./: .gitignore  LICENSE  README.md  pyproject.toml  text_summarizer.py
