[tool.poetry]
name = "summarizer_serve"
version = "0.1.0"
description = "Text summarizer using hugging face and serving using mlflow"
authors = ["Achintya Shankhdhar"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^1.22.0"
transformers = "^4.15.0"
scikit-learn = "^1.0.2"
pandas = "^1.3.5"
sentencepiece = "^0.1.96"
torch = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
